@@ -138,6 +138,12 @@ files/directories from the CLASSPATH it passes to the compiler.</p>
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">nowarn</td>
+    <td valign="top">indicates whether -nowarn switch should be passed
+      to the compiler; defaults to <code>off</code>.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">debug</td>
     <td valign="top">indicates whether source should be compiled with debug
       information; defaults to <code>off</code>.</td>
